<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <EditText
        android:id="@+id/edit_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:hint="@string/title_placeholder"
        android:inputType="text" />
    <EditText
        android:id="@+id/edit_description"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:hint="@string/description_placeholder"
        android:inputType="text" />
    <EditText
        android:id="@+id/edit_price"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:hint="@string/price_placeholder"
        android:inputType="numberDecimal" />
    <EditText
        android:id="@+id/edit_photo_url"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:hint="@string/photo_url_placeholder"
        android:inputType="text" />
    <Button
        android:id="@+id/apply_button"
        android:text="@string/apply_button"
        android:layout_margin="8dp"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</LinearLayout>